# pycatsearch

./: .gitignore  MANIFEST.in  README.md  async_downloader.py  catalog.py  catalog_entry.py  download raw data.py  download species list.py  downloader.py  gui.py  linguist.sh  lrelease.sh  lupdate.sh  main.py  preferences.py  pyproject.toml  requirements.txt  settings.py  setup.py  substance_info.py  updater.py  utils.py
.github/workflows/: publish-to-pypi.yml
gui/: __init__.py  _float_spinbox.py  _frequency_box.py  _menu_bar.py  _preferences.py  _settings.py  _substance_info.py  _substances_box.py  _ui.py  catalog_info.py  download_dialog.py  float_spinbox.py  floatspinbox.py  frequency_box.py  gui.py  menu_bar.py  preferences.py  save_file_path_entry.py  settings.py  substance_info.py  substances_box.py  ui.py  waiting_screen.py
gui/qt/: core.py  gui.py  widgets.py
src/_dynamic_qt/: dynamic_qt.py
src/i18n/: de.ts  fr.ts  ru.ts
src/pycatsearch/: __init__.py  __main__.py  async_downloader.py  catalog.py  catalog_entry.py  downloader.py  updater.py  utils.py  version.py
src/pycatsearch/gui/: __init__.py  about_dialog.py  catalog_info.py  download_dialog.py  file_dialog.py  file_dialog_source.py  float_spinbox.py  found_lines_model.py  frequency_box.py  html_style_delegate.py  menu_bar.py  open_file_path_entry.py  preferences.py  save_catalog_waiting_screen.py  settings.py  substance_info.py  substances_box.py  ui.py  url_label.py  waiting_screen.py
src/pycatsearch/gui/catalog_wizard/: __init__.py  download_confirmation_page.py  summary_page.py
src/pycatsearch/gui/i18n/: de.qm  de.ts  fr.qm  fr.ts  ru.qm  ru.ts
src/test/: test_cli.py  test_download.py  test_search.py
test/: test_cli.py  test_gui.py  test_search.py
