[build-system]
requires = ['setuptools>=77.0.3', 'packaging>=20', 'setuptools_scm[toml]>=6.2']
build-backend = 'setuptools.build_meta'

[project]
name = 'pycatsearch'
authors = [
    {name = 'StSav012', email = 'stsav012@gmail.com'},
]
description = 'Yet another implementation of JPL and CDMS spectroscopy catalogs offline search'
readme = 'README.md'
license = 'LGPL-3.0-only'
requires-python = '>=3.9'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    'Typing :: Typed',
]
dynamic = ['version']
dependencies = []
optional-dependencies = { aiohttp = ['aiohttp'], orjson = ['orjson'] }

[project.scripts]
pycatsearch-cli = 'pycatsearch:main'
pycatsearch-downloader = 'pycatsearch:download'
pycatsearch-async-downloader = 'pycatsearch:async_download'

[project.urls]
'Source Code' = 'https://github.com/StSav012/pycatsearch'
'Bug Tracker' = 'https://github.com/StSav012/pycatsearch/issues'

[tool.setuptools_scm]
local_scheme = 'no-local-version'
write_to = 'src/pycatsearch/_version.py'

[tool.setuptools.dynamic]
version = { attr = 'pycatsearch._version.__version__' }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "NPY201"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
relative-imports-order = "closest-to-furthest"
